--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -50,20 +50,19 @@ footer(role='contentinfo')
                         .wrap-popup-content
                             h3 C помощью почты
                             form.form-horizontal.form-popup(role='form',method="post",action="/register/")
-                                input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                                 .form-group
                                     label.col-sm-3.control-label(for='inputEmail') E-mail
                                     .col-sm-9
-                                        input#inputEmail.form-control(type='email',name='email')
+                                        input#inputEmail.form-control(type='email',name='email',required)
                                 .form-group
                                     label.col-sm-3.control-label(for='inputPassword') Пароль
                                     .col-sm-9
-                                        input#inputPassword.form-control(type='password',name='password')
+                                        input#inputPassword.form-control(type='password',name='password1',required)
                                         //p Количество символов должно быть не менее 8-ми.
                                 .form-group
                                     label.col-sm-3.control-label(for='inputPasswordRe') Повторите пароль
                                     .col-sm-9
-                                        input#inputPasswordRe.form-control(type='password',name='password2')
+                                        input#inputPasswordRe.form-control(type='password',name='password2',required)
                                 .form-group
                                     .col-sm-offset-3.col-sm-10
                                         button.btn.btn-yellow1(type='submit') Зарегистрироваться
@@ -87,15 +86,14 @@ footer(role='contentinfo')
                         .wrap-popup-content
                             h3 C помощью почты
                             form.form-horizontal.form-popup(role='form',method="post",action="/login/")
-                                input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                                 .form-group
                                     label.col-sm-3.control-label(for='inputEmail1') E-mail
                                     .col-sm-9
-                                        input#inputEmail1.form-control(type='email',name='username')
+                                        input#inputEmail1.form-control(type='email',name='username',required)
                                 .form-group
                                     label.col-sm-3.control-label(for='inputPassword1') Пароль
                                     .col-sm-9
-                                        input#inputPassword1.form-control(type='password',name='password')
+                                        input#inputPassword1.form-control(type='password',name='password',required)
                                 .form-group
                                     .col-sm-offset-3.col-sm-10
                                         button.btn.btn-yellow1(type='submit') Войти
