--- a/interface/jade/page_login.jade
+++ b/interface/jade/page_login.jade
@@ -12,15 +12,14 @@ body
                             .form-enter
                                 p C помощью E-mail
                                 form.form-horizontal(role='form', method='post')
-                                    input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                                     .form-group(class=error?"has-error":"")
                                         label.col-sm-2.control-label(for='inputEmail3') Email
                                         .col-sm-10
-                                            input#inputEmail3.form-control(type='email', name='username')
+                                            input#inputEmail3.form-control(type='email', name='username',required)
                                     .form-group(class=error?"has-error":"")
                                         label.col-sm-2.control-label(for='inputPassword3') Пароль
                                         .col-sm-10
-                                            input#inputPassword3.form-control(type='password', name='password')
+                                            input#inputPassword3.form-control(type='password', name='password',required)
                                             if error
                                                 p=error
                                     .form-group
