--- a/interface/jade/page_register.jade
+++ b/interface/jade/page_register.jade
@@ -12,23 +12,22 @@ body
                             .form-enter
                                 p C помощью почты
                                 form.form-horizontal(role='form',method='post')
-                                    input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                                     .form-group(class=error && error.email?"has-error":"")
                                         label.col-sm-4.control-label(for='inputEmail3') Email
                                         .col-sm-8
-                                            input#inputEmail3.form-control(type='email',name='email')
+                                            input#inputEmail3.form-control(type='email',name='email',required)
                                             if error && error.email
                                                 p=error.email
                                     .form-group(class=error && error.password?"has-error":"")
                                         label.col-sm-4.control-label(for='inputPassword3') Пароль
                                         .col-sm-8
-                                            input#inputPassword3.form-control(type='password',name='password')
+                                            input#inputPassword3.form-control(type='password',name='password1',required)
                                             if error && error.password
                                                 p=error.password
                                     .form-group(class=error && error.password2?"has-error":"")
                                         label.col-sm-4.control-label(for='inputPassword4') Повторите пароль
                                         .col-sm-8
-                                            input#inputPassword4.form-control(type='password',name='password2')
+                                            input#inputPassword4.form-control(type='password',name='password2',required)
                                             if error && error.password2
                                                 p=error.password2
                                     .form-group
